Implement AFK status management with event handling and activity tracking